# Thesis-AD-Detection

./: .gitignore  main.py  package_notes.txt  test_dataloader.py
Data/: ASR_audio_dataset.py  ASR_collection.py  acoustic_features.py  cha_collection.py  linguistic_features.py  text_cleaning_English.py
Data/_Combined/: debug.jsonl
Models/: dataloader.py  main.py
data/: cha_collection.py  collection.py  create_multiconad.py  file_struct.txt  text_cleaning_English.py
data/SeamlessInteraction/: download_seamless.py  extract_gemma.py  (+3 more)
proposal/: proposal2.aux  proposal2.bbl  proposal2.bbl-SAVE-ERROR  proposal2.bcf  proposal2.bcf-SAVE-ERROR  proposal2.blg  proposal2.fdb_latexmk  proposal2.fls  proposal2.out  proposal2.pdf.bak  proposal2.run.xml  proposal2.tex  proposal2.tex.bak  proposal2.xdv  references.bib  report.aux  report.bbl  report.bbl-SAVE-ERROR  report.bcf  report.bcf-SAVE-ERROR  report.blg  report.fdb_latexmk  report.fls  report.out  report.tdo  report.tex  report.xdv  texput.fls
proposal1/: main.bbl  main.bbl-SAVE-ERROR  main.tex  references.bib  xelatex195553.fls
results/: results_sum.md  sum_results.py
src/: benchmarks.ipynb  cfg_meld.yaml  cfg_pretrain.yaml  config.py  config.yaml  data-analysis.ipynb  dataloader.py  dataset.py  hpo.py  main.py  model.py  modules.py  pretrain.py  pyproject.toml  test_memory.py  train.py  train_meld.py  utils.py
src.bak/: train.py
src/baseline/: baseline_tfidf_ml.py  rf_results.csv  svm_results.csv
src/models/: pretrained.py  test_models.py  testmodels.py  wavlm_model.py
test/: acoustic_lingual_alignment.py
(+81 files in other folders)
